Make logo borders wider

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -86,31 +86,13 @@
 .nav__link--contact--active
   +nav-link-active($nav-strikethrough-color--contact)
 
-
-// Logo SVG Styles
-// ---------------
+// Logo styles
 
 .logo
   height: 100%
 
 .logo__light
   fill: $logo-light-fill-color--pink
-.logo__light--pink
-  fill: $logo-light-fill-color--pink
-.logo__light--orange
-  fill: $logo-light-fill-color--orange
-.logo__light--yellow
-  fill: $logo-light-fill-color--yellow
-.logo__light--cyan
-  fill: $logo-light-fill-color--cyan
 
 .logo__dark
   fill: $logo-dark-fill-color--pink
-.logo__dark--pink
-  fill: $logo-dark-fill-color--pink
-.logo__dark--orange
-  fill: $logo-dark-fill-color--orange
-.logo__dark--yellow
-  fill: $logo-dark-fill-color--yellow
-.logo__dark--cyan
-  fill: $logo-dark-fill-color--cyan
