Setup why-us section

--- a/global/main.sass
+++ b/global/main.sass
@@ -21,3 +21,4 @@
 @import ../components/projects/projects
 @import ../components/workflow/workflow
 @import ../components/skewed-section/skewed-section
+@import ../components/why-us/why-us
