--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -140,3 +140,12 @@ $logo-dark-fill-color--pink: $color-primary-110
 $logo-dark-fill-color--orange: $color-accent-orange-110
 $logo-dark-fill-color--yellow: $color-accent-yellow-110
 $logo-dark-fill-color--cyan: $color-accent-cyan-110
+
+// Why us colors
+$why-us-header-color: $color-neutral-20
+$why-us-tagline-color: $color-neutral-40
+$why-us-button-color: $color-neutral-20
+$why-us-button-color--dark: $color-neutral-100
+$modal-background-color: $color-neutral-20
+$modal-header-color: $color-neutral-100
+$modal-question-color: $color-neutral-80
