Change css classes to work with google forms extension

--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -64,27 +64,27 @@
   flex-direction: column
   margin: $spacing-20 0
 
-.form__input,
-.form__textarea,
+.form__field__control,
+textarea.form__field__control,
 .form__button
   font-size: $font-size-20
   padding: 0.5rem
   margin: $spacing-20 0
   color: $contact-input-color
 
-.form__input,
-.form__textarea
+.form__field__control,
+textarea.form__field__control
   border: 1px solid $contact-border-color
   width: 24rem
 
-.form__input
+.form__field__control
   height: 3rem
 
-.form__textarea
-  height: 8rem
-  background-color: transparent
+textarea.form__field__control
+    height: 8rem
+    background-color: transparent
 
-.form__label
+.form__field__label
   color: $contact-label-color
 
 .form__button
