--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -4,12 +4,12 @@
     <!-- <h4 class="hero__subheading">A cool tagline can go here</h4> -->
     <div class="hero__video-wrap">
       <video
-        src="/static/images/particle.mp4"
         autoplay="true"
         loop="true"
         class="hero__video"
         muted="true"
         playsinline="true"
+        poster="/static/images/particles.jpg"
       ></video>
     </div>
     <div class="hero__overlay"></div>
