Fix form class issue, add placeholders, etc

--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -17,7 +17,7 @@
     <form
       action="{{ component.projectForm.action }}"
       method="POST"
-      class="{{ component.projectForm.class }}"
+      class="contact__form contact__form--1"
     >
       {{ google_forms.render_fields(component.projectForm.items) }}
       <div class="form__group">
@@ -27,7 +27,7 @@
     <form
       action="{{ component.coffeeForm.action }}"
       method="POST"
-      class="{{ component.coffeeForm.class }}"
+      class="contact__form contact__form--2"
     >
       {{ google_forms.render_fields(component.coffeeForm.items) }}
       <div class="form__group">
@@ -37,7 +37,7 @@
     <form
       action="{{ component.chatForm.action }}"
       method="POST"
-      class="{{ component.chatForm.class }}"
+      class="contact__form contact__form--3"
     >
       {{ google_forms.render_fields(component.chatForm.items) }}
       <div class="form__group">
