--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -46,6 +46,12 @@
 .contact__topic:hover
   transform: translateX(0.5rem)
 
+.contact__topic--active
+  transform: translateX(1rem)
+
+.contact__topic--active:hover
+  transform: translateX(1rem)
+
 .contact__right
   height: 65vh
   width: 50%
