--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -21,7 +21,7 @@
   flex-direction: column
   align-items: flex-start
   justify-content: center
-  padding: 5rem
+  padding: 10rem 5rem
   background-color: $workflow-background-color
 
 .workflow__title
@@ -30,6 +30,7 @@
   +font-weight-bold
   font-size: $font-size-50
   margin-bottom: $spacing-40
+  margin-top: $spacing-50
 
 .workflow__paragraph
   color: $workflow-paragraph-color
@@ -37,7 +38,7 @@
   +font-weight-regular
   font-size: $font-size-30
   line-height: $spacing-40
-  margin-bottom: $spacing-60
+  margin-bottom: $spacing-30
   max-width: 40rem
 
 .workflow__image
