Give logo.svg classes

--- a/components/nav/nav.html
+++ b/components/nav/nav.html
@@ -10,12 +10,6 @@
       >
         <defs>
           <style>
-            .cls-1 {
-              fill: #ff008e;
-            }
-            .cls-2 {
-              fill: #de0087;
-            }
             .cls-3 {
               fill: none;
               stroke: #000;
@@ -26,15 +20,15 @@
         </defs>
         <title>nerdwise-logo</title>
         <path
-          class="cls-1"
+          class="logo__light"
           d="M22.55,825.42a2.85,2.85,0,0,1-.37-1.81L118.4,289.06a5.18,5.18,0,0,1,.75-1.8l74-105.67a.93.93,0,0,1,1.36-.19L836.72,695.2c.43.35.8.18.82-.37L858.93,63.74c0-.55.24-.6.49-.11l84.93,164.54a5.64,5.64,0,0,1,.51,1.89L977,861.15a1.69,1.69,0,0,1-.84,1.46L833,936.8a2,2,0,0,1-1.75,0L146.26,530a.61.61,0,0,0-1,.48l-48,405.77c-.06.54-.37.62-.67.16Z"
         />
         <path
-          class="cls-2"
+          class="logo__dark"
           d="M578.57,488.68a1.75,1.75,0,0,1-.57-1.6L622.69,273a3.59,3.59,0,0,1,1-1.64L858.22,63.4c.41-.36.73-.21.71.34L837.54,694.83c0,.55-.39.72-.82.37Z"
         />
         <polygon
-          class="cls-2"
+          class="logo__dark"
           points="97.11 937.26 435.12 867.51 427.05 696.74 145.4 529.51 97.11 937.26"
         />
         <path
