Begin fixing scrollWatcher

--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -1,4 +1,4 @@
-<section class="projects" id="projects">
+<section class="projects section" id="projects">
   <h1 class="projects__header">Projects</h1>
   {% for project in component.projects %}
   <div class="project">
