--- a/components/workflow/workflow.html
+++ b/components/workflow/workflow.html
@@ -1,4 +1,4 @@
-<section class="workflow" id="workflow">
+<section class="workflow section" id="workflow">
   <div class="left">
     <img
       src="/static/images/workflow.jpg"
