--- a/components/about/about.html
+++ b/components/about/about.html
@@ -1,4 +1,4 @@
-<section class="about" id="about">
+<section class="about section" id="about">
   <h1 class="about__header">
     {{ component.title }}
   </h1>
