--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -1,4 +1,4 @@
-<section class="contact" id="contact">
+<section class="contact section" id="contact">
   <div class="contact__info">
     <h1 class="contact__header">Get in touch.</h1>
     <a href="mailto:{{ component.email }}" class="contact__email">{{
