Begin setup of block scroll tween

--- a/components/blocks/blocks.html
+++ b/components/blocks/blocks.html
@@ -1,4 +1,5 @@
 <div class="block-spacer"></div>
 <div class="block {{ component.block_css_classes|join(' ') }}">
   <div class="block__background"></div>
+  <div class="block__background block__background--next"></div>
 </div>
