Setup logo color change with activeoncondition

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -93,6 +93,34 @@
 
 .logo__light
   fill: $logo-light-fill-color--pink
+  transition: 0.3s fill
+
+.logo__workflow
+  .logo__light
+    fill: $logo-light-fill-color--pink
+.logo__projects
+  .logo__light
+    fill: $logo-light-fill-color--orange
+.logo__about
+  .logo__light
+    fill: $logo-light-fill-color--yellow
+.logo__contact
+  .logo__light
+    fill: $logo-light-fill-color--cyan
 
 .logo__dark
   fill: $logo-dark-fill-color--pink
+  transition: 0.3s fill
+
+.logo__workflow
+  .logo__dark
+    fill: $logo-dark-fill-color--pink
+.logo__projects
+  .logo__dark
+    fill: $logo-dark-fill-color--orange
+.logo__about
+  .logo__dark
+    fill: $logo-dark-fill-color--yellow
+.logo__contact
+  .logo__dark
+    fill: $logo-dark-fill-color--cyan
