Explicitly map sections to respective nav links

--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -1,4 +1,8 @@
-<section class="projects section" id="projects">
+<section
+  class="projects section"
+  id="projects"
+  data-target="nav__link--projects"
+>
   <h1 class="projects__header">Projects</h1>
   {% for project in component.projects %}
   <div class="project">
