--- a/components/workflow/workflow.html
+++ b/components/workflow/workflow.html
@@ -1,4 +1,8 @@
-<section class="workflow section" id="workflow">
+<section
+  class="workflow section"
+  id="workflow"
+  data-target="nav__link--workflow"
+>
   <div class="left">
     <img
       src="/static/images/workflow.jpg"
