Setup contentful on about section

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -7,7 +7,7 @@
     <div class="profile__frame">
       <img
         src="{{ person.image.url }}"
-        alt="{{ person.image.alt }}"
+        alt="{{ person.image.description }}"
         class="profile__image"
       />
     </div>
