Fix contentful image src paths

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -6,7 +6,7 @@
   <div class="{{ person.class }}">
     <div class="profile__frame">
       <img
-        src="{{ person.image.url }}"
+        src="{{ person.image.file.url }}"
         alt="{{ person.image.description }}"
         class="profile__image"
       />
