--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -7,11 +7,11 @@
   {% for project in component.projects %}
   <div class="project">
     <img
-      src="{{ project.image.url }}"
-      alt="{{ project.image.alt }}"
+      src="{{ project.image.file.url }}"
+      alt="{{ project.image.description }}"
       class="project__image"
     />
-    <div class="{{ project.infoClass }}">
+    <div class="{{ project.info_class }}">
       <h2 class="project__name">{{ project.name }}</h2>
       <p class="project__about">
         {{ project.about }}
