Change instance of css class keys to css_class

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -3,7 +3,7 @@
     {{ component.title }}
   </h1>
   {% for person in component.staff %}
-  <div class="{{ person.class }}">
+  <div class="{{ person.css_class }}">
     <div class="profile__frame">
       <img
         src="{{ person.image.file.url }}"
