--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -6,7 +6,7 @@
     }}</a>
     <div class="contact__topics">
       {% for topic in component.topics %}
-      <a class="{{ topic.class }}">{{ topic.name }} &#10141;</a>
+      <a class="{{ topic.css_class }}">{{ topic.name }} &#10141;</a>
       {% endfor %}
     </div>
   </div>
