--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -11,7 +11,7 @@
       alt="{{ project.image.description }}"
       class="project__image"
     />
-    <div class="{{ project.info_class }}">
+    <div class="{{ project.info_css_class }}">
       <h2 class="project__name">{{ project.name }}</h2>
       <p class="project__about">
         {{ project.about }}
