Add small fudge amount to color tweens

--- a/components/blocks/blocks.sass
+++ b/components/blocks/blocks.sass
@@ -7,7 +7,7 @@
   width: 100%
 
 =block-color($start, $middle, $right)
-  background: linear-gradient(to right, $color-white 50%, $start 60%, $middle 90%, $right 100%)
+  background: linear-gradient(to right, $color-neutral-100 0%, $start 60%, $middle 90%, $right 100%)
 
 .block--pink
   .block__background
