--- a/global/main.sass
+++ b/global/main.sass
@@ -3,7 +3,7 @@
 
 // Config files
 @import ./sass-config/colors
-@import ./sass-config/mixins
+@import sass-mixins/box-shadows
 @import ./sass-config/font-sizes
 @import ./sass-config/base
 @import ./sass-config/line-height
