--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -70,8 +70,10 @@ $nav-strikethrough-color--projects: $color-accent-orange-100
 $nav-strikethrough-color--workflow: $color-primary-100
 $nav-strikethrough-color--contact: $color-accent-cyan-100
 
+// Sub-header colors
+$sub-header-fallback-color: white
+
 // About colors
-$profile-name-font-color: white
 $profile-about-font-color: $color-neutral-20
 $about-fade-start-color: $color-neutral-20
 $about-fade-end-color: rgba(0, 0, 0, 0)
@@ -80,7 +82,6 @@ $about-gradient-font-start-color: $color-accent-yellow-100
 $about-gradient-font-end-color: $color-neutral-100
 
 // Projects colors
-$project-name-font-color: white
 $project-about-font-color: $color-neutral-20
 $project-gradient-font-start-color: $color-accent-orange-100
 $project-gradient-font-end-color: $color-neutral-100
