--- a/global/sass-config/_font-sizes.sass
+++ b/global/sass-config/_font-sizes.sass
@@ -19,14 +19,12 @@ $font-size-110: 20rem
 // Nav
 $nav-link-font-size: $font-size-30
 
-// About
-$profile-name-font-size: $font-size-60
-$profile-position-font-size: $font-size-60
-$profile-about-font-size: $font-size-30
+// Sub-header
+$sub-header-font-size: $font-size-70
+$body-font-size: $font-size-30
 
-// Projects
-$project-name-font-size: $font-size-70
-$project-about-font-size: $font-size-30
+// About
+$profile-position-font-size: $font-size-60
 
 // Hero
 $hero-header-font-size: $font-size-70
