--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -50,6 +50,6 @@
 .project__about
   +font-secondary
   +font-weight-regular
-  font-size: $project-about-font-size
+  font-size: $body-font-size
   color: $project-about-font-color
   line-height: $project-about-line-height
