Attempt to fix build

--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -49,7 +49,7 @@
   +font-primary
   +font-weight-light
   font-size: $profile-position-font-size
-  color: $profile-name-font-color
+  color: $profile-position-font-color
 
 .profile__about
   +font-primary
