--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -30,7 +30,7 @@
   cursor: pointer
   transition: color 0.2s, background 0.2s
 
-.why-us__button:hover 
+.why-us__button:hover
   color: $why-us-button-color--dark
   background: $why-us-button-color
 
@@ -63,7 +63,7 @@
   flex-direction: column
   align-items: center
   justify-content: space-evenly
-  background: white
+  background: $color-white
   position: fixed
   background: $modal-background-color
 
