--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -1,7 +1,7 @@
 // BY NAME
 // Define all your color values by color names here
 
-$color-white: white
+$color-white: $color-white
 $color-black: black
 
 // Neutral
@@ -71,13 +71,14 @@ $nav-strikethrough-color--workflow: $color-primary-100
 $nav-strikethrough-color--contact: $color-accent-cyan-100
 
 // Sub-header colors
-$sub-header-fallback-color: white
+$sub-header-fallback-color: $color-white
 
 // About colors
 $profile-about-font-color: $color-neutral-20
 $about-fade-start-color: $color-neutral-20
 $about-fade-end-color: rgba(0, 0, 0, 0)
 $profile-block-color: $color-neutral-20
+$profile-position-font-color: $color-white
 $about-gradient-font-start-color: $color-accent-yellow-100
 $about-gradient-font-end-color: $color-neutral-100
 
