Attempt to fix SASS build

--- a/components/footer/footer.sass
+++ b/components/footer/footer.sass
@@ -1,5 +1,7 @@
-@import ../global/sass-config/_mixins
-  
+@import ../../global/sass-config/colors
+@import ../../global/sass-config/font-sizes
+@import ../../global/sass-mixins/typography
+
 .footer
   height: 10vh
   max-width: 100%
