--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -1,4 +1,8 @@
-@import ../global/sass-config/_mixins
+@import ../../global/sass-config/colors
+@import ../../global/sass-config/font-sizes
+@import ../../global/sass-config/spacing
+@import ../../global/sass-mixins/breakpoints
+@import ../../global/sass-mixins/typography
 
 .hero
   height: 100vh
