--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -1,4 +1,6 @@
-@import ../global/sass-config/_mixins
+@import ../../global/sass-config/colors
+@import ../../global/sass-config/font-sizes
+@import ../../global/sass-mixins/typography
 
 .nav
   +font-primary
