Fix bad find-replace

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -1,7 +1,7 @@
 // BY NAME
 // Define all your color values by color names here
 
-$color-white: $color-white
+$color-white: white
 $color-black: black
 
 // Neutral
