Remove unused component

--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -44,7 +44,7 @@
   margin: 0 $spacing-60
 
 .profile__name
-  +sub-header
+  +sub-header($about-gradient-font-start-color, $about-gradient-font-end-color)
   margin-bottom: $spacing-20
 
 .profile__position
