--- a/global/main.sass
+++ b/global/main.sass
@@ -14,3 +14,8 @@
 @import ../components/workflow/workflow
 @import ../components/skewed-section/skewed-section
 @import ../components/why-us/why-us
+
+// Global styles
+@import sass-config/colors
+body
+  background: $color-neutral-100
