Sass fixes, removed unused component

--- a/components/colors/colors.sass
+++ b/components/colors/colors.sass
@@ -1,3 +1,7 @@
+@import ../../global/sass-config/colors
+@import ../../global/sass-config/font-sizes
+@import ../../global/sass-config/spacing
+
 .colors
   width: 100vw
   display: flex
@@ -12,7 +16,7 @@
   +font-primary
   margin: $spacing-30
 
-.neutral, 
+.neutral,
 .primary,
 .cyan,
 .yellow,
