--- a/components/contact/contact.sass
+++ b/components/contact/contact.sass
@@ -1,3 +1,8 @@
+@import ../../global/sass-config/colors
+@import ../../global/sass-config/font-sizes
+@import ../../global/sass-config/spacing
+@import ../../global/sass-mixins/typography
+
 .contact
   min-height: 100vh
   padding: 17vw 0
@@ -100,7 +105,7 @@ textarea.form__field__control
   +font-weight-light
   text-transform: uppercase
   transition: background-color 0.2s, color 0.2s
-  
+
 .form__button:hover
   background-color: $contact-button-hover-background-color
   color: $contact-button-hover-font-color
