Finish fixing up SASS imports

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -1,5 +1,6 @@
 @import ../../global/sass-config/colors
 @import ../../global/sass-config/font-sizes
+@import ../../global/sass-config/spacing
 @import ../../global/sass-mixins/typography
 
 .nav
@@ -19,6 +20,7 @@
 .nav__brand
   height: calc(100% + 1rem)
   padding: 1rem
+  box-sizing: border-box
 
 .nav__logo
   height: 100%
@@ -80,7 +82,6 @@
     transform: translateY(-.5rem) rotate(45deg)
 
 // Logo styles
-
 .logo
   height: 100%
 
