--- a/global/main.sass
+++ b/global/main.sass
@@ -1,9 +1,11 @@
 // Get to a blank slate.
 @import sass-global-sources/reset
 
+// Global styles
+@import sass-global-sources/base
+
 // Bring in components
 @import ../components/about/about
-@import ../components/accordion/accordion
 @import ../components/blocks/blocks
 @import ../components/colors/colors
 @import ../components/contact/contact
@@ -14,8 +16,3 @@
 @import ../components/workflow/workflow
 @import ../components/skewed-section/skewed-section
 @import ../components/why-us/why-us
-
-// Global styles
-@import sass-config/colors
-body
-  background: $color-neutral-100
