--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -80,17 +80,17 @@ $about-fade-end-color: rgba(0, 0, 0, 0)
 $profile-block-color: $color-neutral-20
 $profile-position-font-color: $color-white
 $about-gradient-font-start-color: $color-accent-yellow-100
-$about-gradient-font-end-color: $color-neutral-100
+$about-gradient-font-end-color: $color-accent-yellow-110
 
 // Projects colors
 $project-about-font-color: $color-neutral-20
 $project-gradient-font-start-color: $color-accent-orange-100
-$project-gradient-font-end-color: $color-neutral-100
+$project-gradient-font-end-color: $color-accent-orange-110
 
 // Hero colors
 $hero-background-color: $color-neutral-100
 $hero-gradient-font-start-color: $color-primary-100
-$hero-gradient-font-end-color: $color-neutral-100
+$hero-gradient-font-end-color: $color-primary-120
 
 // Footer colors
 $footer-background-color: $color-neutral-100
