--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -1,3 +1,8 @@
+@import ../../global/sass-config/colors
+@import ../../global/sass-config/font-sizes
+@import ../../global/sass-config/spacing
+@import ../../global/sass-mixins/typography
+
 .why-us
   min-height: 100vh
   padding: 10vh 0
