--- a/components/workflow/workflow.sass
+++ b/components/workflow/workflow.sass
@@ -1,3 +1,8 @@
+@import ../../global/sass-config/colors
+@import ../../global/sass-config/font-sizes
+@import ../../global/sass-config/spacing
+@import ../../global/sass-mixins/typography
+
 .workflow
   display: flex
   min-height: 100vh
