Remove hero video

--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -4,6 +4,7 @@
 @import ../../global/sass-mixins/typography
 
 .why-us
+  background: $color-neutral-100
   min-height: 100vh
   padding: 10vh 0
   display: flex
