--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -16,7 +16,7 @@
 .hero__heading
   +font-secondary
   +font-weight-bold
-  font-size: $font-size-110
+  font-size: 17vw
   color: $color-neutral-20
   background: -webkit-linear-gradient($hero-gradient-font-start-color, $hero-gradient-font-start-color 67%, $hero-gradient-font-end-color)
   -webkit-background-clip: text
