Remove unused code

--- a/global/sass-mixins/_sub-header.sass
+++ b/global/sass-mixins/_sub-header.sass
@@ -8,7 +8,8 @@
   +font-weight-bold
   font-size: $sub-header-font-size
   color: $sub-header-fallback-color
-  background: -webkit-linear-gradient($start-color, $start-color 67%, $end-color)
+  background: linear-gradient(-3deg, $start-color, $end-color)
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
   padding-bottom: 0.6rem
+
