--- a/components/skewed-section/skewed-section.sass
+++ b/components/skewed-section/skewed-section.sass
@@ -4,6 +4,7 @@
   overflow: hidden
   margin-bottom: -10vw
   background: $color-neutral-100
+  margin-top: -1px // Fudge the skew overlap a little to account for rounding
 
 .skewed-section__content
   margin-top: -10vw
