--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -12,54 +12,125 @@
   </div>
 
   <div class="contact__right">
-    <!-- {% import "/extensions/google_forms/google_forms.html" as google_forms with
-    context %}
     <form
       action="{{ component.projectForm.action }}"
-      method="POST"
       class="contact__form contact__form--1"
     >
-      {{ google_forms.render_fields(component.projectForm.items) }}
+      <div class="form__group">
+        <label for="entry.709035373" class="form__field__label">Name</label>
+        <input
+          type="text"
+          class="form__field__control"
+          name="entry.709035373"
+          placeholder="Name"
+        />
+      </div>
+      <div class="form__group">
+        <label for="entry.1301712150" class="form__field__label">Company</label>
+        <input
+          type="text"
+          class="form__field__control"
+          name="entry.1301712150"
+          placeholder="Company"
+        />
+      </div>
+      <div class="form__group">
+        <label for="entry.465442047" class="form__field__label">Email</label>
+        <input
+          type="email"
+          class="form__field__control"
+          name="entry.465442047"
+          placeholder="Email"
+        />
+      </div>
+      <div class="form__group">
+        <label for="entry.508162947" class="form__field__label">Budget</label>
+        <input
+          type="text"
+          class="form__field__control"
+          name="entry.508162947"
+          placeholder="Budget"
+        />
+      </div>
+      <div class="form__group">
+        <label for="entry.457207032" class="form__field__label">Message</label>
+        <textarea
+          type="text"
+          class="form__field__control"
+          name="entry.457207032"
+          placeholder="Tell us about your project."
+        ></textarea>
+      </div>
       <div class="form__group">
         <button type="submit" class="form__button">Send</button>
       </div>
     </form>
+
     <form
       action="{{ component.coffeeForm.action }}"
-      method="POST"
       class="contact__form contact__form--2"
     >
-      {{ google_forms.render_fields(component.coffeeForm.items) }}
+      <div class="form__group">
+        <label for="entry.955900110" class="form__field__label">Name</label>
+        <input
+          type="text"
+          class="form__field__control"
+          name="entry.955900110"
+          placeholder="Name"
+        />
+      </div>
+      <div class="form__group">
+        <label for="entry.1687256934" class="form__field__label">Email</label>
+        <input
+          type="email"
+          class="form__field__control"
+          name="entry.1687256934"
+          placeholder="Email"
+        />
+      </div>
+      <div class="form__group">
+        <label for="entry.598564064" class="form__field__label">Message</label>
+        <textarea
+          type="text"
+          class="form__field__control"
+          name="entry.598564064"
+          placeholder="How do you like your coffee?"
+        ></textarea>
+      </div>
       <div class="form__group">
         <button type="submit" class="form__button">Send</button>
       </div>
-    </form> -->
+    </form>
+
     <form
       action="{{ component.chatForm.action }}"
       class="contact__form contact__form--3"
     >
       <div class="form__group">
+        <label for="entry.617208522" class="form__field__label">Name</label>
         <input
           type="text"
-          class="form__input"
+          class="form__field__control"
           name="entry.617208522"
           placeholder="Name"
         />
       </div>
       <div class="form__group">
+        <label for="entry.1213075532" class="form__field__label">Email</label>
         <input
           type="email"
-          class="form__input"
+          class="form__field__control"
           name="entry.1213075532"
           placeholder="Email"
         />
       </div>
       <div class="form__group">
+        <label for="entry.1915984557" class="form__field__label">Message</label>
         <textarea
           type="text"
-          class="form__textarea"
+          class="form__field__control"
           name="entry.1915984557"
-          placeholder="Message"
+          placeholder="So what do you want to talk about?"
         ></textarea>
       </div>
       <div class="form__group">
