--- a/components/why-us/why-us.sass
+++ b/components/why-us/why-us.sass
@@ -2,6 +2,7 @@
 @import ../../global/sass-config/font-sizes
 @import ../../global/sass-config/spacing
 @import ../../global/sass-mixins/typography
+@import ../../global/sass-mixins/breakpoints
 
 .why-us
   background: $color-neutral-100
@@ -18,6 +19,9 @@
   +font-weight-bold
   color: $why-us-header-color
   margin-bottom: $spacing-60
+  +media(mobile)
+    font-size: $font-size-50
+    margin-bottom: $spacing-40
 
 .why-us__tagline
   font-size: $font-size-50
@@ -25,6 +29,11 @@
   +font-weight-regular
   color: $why-us-tagline-color
   margin-bottom: $spacing-60
+  text-align: center
+  +media(mobile)
+    font-size: $font-size-40
+    margin: $spacing-30
+    margin-bottom: $spacing-40
 
 .why-us__button
   font-size: $font-size-50
@@ -35,6 +44,8 @@
   padding: $spacing-20 $spacing-60
   cursor: pointer
   transition: color 0.2s, background 0.2s
+  +media(mobile) 
+    font-size: $font-size-40
 
 .why-us__button:hover
   color: $why-us-button-color--dark
@@ -87,6 +98,9 @@
   +font-primary
   +font-weight-bold
   margin: $spacing-60 0
+  text-align: center
+  +media(mobile)
+    font-size: $font-size-30
 
 .modal__info
   font-size: $font-size-30
@@ -108,4 +122,7 @@
   font-size: $font-size-30
   +font-secondary
   +font-weight-regular
-  margin-bottom: $spacing-50
+  margin-bottom: $spacing-60
+  text-align: center
+  +media(mobile)
+    font-size: $font-size-20
