Increase font-size of nav

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -39,7 +39,7 @@
   text-decoration: none
   color: $nav-font-color
   font-size: $nav-link-font-size
-  transition: font-weight 0.2s
+  transition: font-weight 0.2s, font-size 0.2s
   text-transform: uppercase
   height: 100%
   padding: 0 $spacing-40
@@ -73,6 +73,7 @@
   z-index: -1
 
 .nav__link--active
+  font-size: 1.5rem
   font-weight: 600
 
   &:after
