--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -1,6 +1,7 @@
 @import ../../global/sass-config/line-height
 @import ../../global/sass-config/spacing
 @import ../../global/sass-mixins/sub-header
+@import ../../global/sass-mixins/breakpoints
 
 .projects
   padding-top: calc(12vh + 10vw)
@@ -9,6 +10,8 @@
   flex-direction: column
   align-items: center
   justify-content: flex-start
+  +media(tablet-landscape)
+    padding-top: calc(6vh + 10vw)
 
 .projects__header
   display: none
@@ -18,19 +21,31 @@
   align-items: flex-start
   justify-content: center
   margin: $spacing-50 0
+  +media(tablet-portrait)
+    flex-direction: column-reverse
+    align-items: center
 
 .project:nth-of-type(odd)
   flex-direction: row-reverse
+  +media(tablet-portrait)
+    flex-direction: column-reverse
+    align-items: center
 
 .project__info
   display: flex
   flex-direction: column
   align-items: flex-start
   justify-content: flex-start
-  position: sticky
-  top: 12vh
   width: 30rem
   margin: 0 $spacing-60
+  max-width: 40%
+  +media(tablet-landscape)
+    margin: 0 $spacing-40
+  +media(tablet-portrait)
+    max-width: 90vw
+    text-align: center
+    margin-bottom: $spacing-40
+    align-items: center
 
 .project__image
   margin: 0 $spacing-60
@@ -40,10 +55,21 @@
   position: fixed
   top: 12vh
   left: 20%
+  max-width: 40vw
+  +media(tablet-landscape)
+    margin: 0 $spacing-40
+  +media(tablet-portrait)
+    max-width: 90vw
 
 .project__name
   margin-bottom: $spacing-60
   +sub-header($project-gradient-font-start-color, $project-gradient-font-end-color)
+  +media(tablet-portrait)
+    margin: 0 auto
+    margin-bottom: $spacing-60
+  +media(mobile)
+    font-size: $font-size-60
+    margin-top: $spacing-30
 
 .project__about
   +font-secondary
@@ -51,3 +77,7 @@
   font-size: $body-font-size
   color: $project-about-font-color
   line-height: $project-about-line-height
+  max-width: 90vw
+  +media(mobile)
+    font-size: $font-size-20
+    line-height: $spacing-40
